objects/CPACanada_File__c.object
<CustomObject>
    <description>CPACanada seal id mapping to report id</description>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <formula>CreatedDate  &lt;&gt;  LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <inlineHelpText>Report Id</inlineHelpText>
        <label>Report Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <inlineHelpText>Report URL</inlineHelpText>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Seal_URL__c</fullName>
        <inlineHelpText>Seal URL</inlineHelpText>
        <label>Seal URL</label>
        <type>Url</type>
    </fields>
    <label>CPACanada File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Seal_URL__c</columns>
        <columns>Report_Id__c</columns>
        <columns>Report_URL__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Seal Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPACanada Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckforReportURL</fullName>
        <active>true</active>
        <description>Report URL must begin with https and have correct format</description>
        <errorConditionFormula>NOT( 
OR(LEN (Report_URL__c) = 0, 
REGEX(Report_URL__c, &quot;^[hH][tT][tT][pP][sS][0-9A-Za-z+&amp;@#/%?=~\\-_|!:,.;\\[\\]()]*$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Report_URL__c</errorDisplayField>
        <errorMessage>URL must begin with &apos;https&apos; and can only contain letters, numbers and following characters: + &amp; @ # / % ? = ~ -_ | ! : , . ; [ ] ( )</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckforSealURL</fullName>
        <active>true</active>
        <description>Seal URL must begin with https and have correct format</description>
        <errorConditionFormula>NOT( 
OR(LEN (Seal_URL__c) = 0, 
REGEX(Seal_URL__c, &quot;^[hH][tT][tT][pP][sS][0-9A-Za-z+&amp;@#/%?=~\\-_|!:,.;\\[\\]()]*$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Seal_URL__c</errorDisplayField>
        <errorMessage>URL must begin with &apos;https&apos; and can only contain letters, numbers and following characters: + &amp; @ # / % ? = ~ -_ | ! : , . ; [ ] ( )</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MatchReportId</fullName>
        <active>false</active>
        <description>Display error when Report ID does not match the number in the Report URL</description>
        <errorConditionFormula>Report_Id__c &lt;&gt; RIGHT(Report_URL__c, LEN(Report_Id__c))</errorConditionFormula>
        <errorMessage>Report ID does not match the number in the Report URL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MatchSealId</fullName>
        <active>false</active>
        <description>Display error when Seal ID does not match the number in the Seal URL</description>
        <errorConditionFormula>Name &lt;&gt;  RIGHT(Seal_URL__c, LEN(Name))</errorConditionFormula>
        <errorMessage>Seal ID does not match the number in the Seal URL</errorMessage>
    </validationRules>
</CustomObject>